--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,12 +58,14 @@ add_executable(firal
     include/firal/bitmap.h
     include/firal/ui.h
     include/firal/camera.h
+    include/firal/ray.h
 
     # Implementation files
     src/main.cpp
     src/bitmap.cpp
     src/ui.cpp
     src/camera.cpp
+    src/ray.cpp
 )
 
 # Lastly, additional libraries may have been built for you.  In addition to linking
